# product-api

./: Dockerfile  LICENSE  docker-compose.yml  pyproject.toml
src/: main.py
src/alembic/versions/: 2024_10_21_0311-3c1f0eb79dce_create_product_and_category_tables.py  2024_10_23_0110-839dbfd27638_add_image_url_column_to_product_table.py
src/api/: __init__.py
src/api/v1/: __init__.py  category.py  product.py
src/core/: config.py  database.py
src/models/: __init__.py  base.py  category.py  product.py
src/repository/: __init__.py  base.py  category.py  product.py  sqlalchemy.py
src/schemas/: category.py  product.py
src/service/: category.py  product.py
src/utils/: case_converter.py
