[tool.poetry]
name = "product-api"
version = "0.1.0"
description = ""
authors = ["Andrii Baziuk <baziukar@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.2"
uvicorn = {extras = ["standard"], version = "^0.32.0"}
pydantic = {extras = ["email"], version = "^2.9.2"}
pydantic-settings = "^2.5.2"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.36"}
asyncpg = "^0.29.0"
alembic = "^1.13.3"
python-multipart = "^0.0.12"
aiofiles = "^24.1.0"


[tool.poetry.group.dev.dependencies]
black = "^24.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
